--- a/registro2/css/style.css
+++ b/registro2/css/style.css
@@ -3,12 +3,15 @@
 }
 .rojo{
   color: red;
-  text-align: center;
-  margin: 10px 5px;
-  
+
 }
 
 .clase1{
   display: flex;
   
 }
+.aligment{
+  text-align: center;
+  margin: 10px 5px;
+}
+ 
